RESOLVED FIXED48433
Crash in NetscapePlugin::shouldLoadSrcURL when using Shockwave Director 10.3 in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=48433
Summary Crash in NetscapePlugin::shouldLoadSrcURL when using Shockwave Director 10.3 ...
Adam Roben (:aroben)
Reported 2010-10-27 08:54:04 PDT
Crash in NetscapePlugin::shouldLoadSrcURL when using Shockwave Director 10.3 in WebKit2 on Windows
Attachments
Patch (15.84 KB, patch)
2010-10-27 08:55 PDT, Adam Roben (:aroben)
eric.carlson: review+
Adam Roben (:aroben)
Comment 1 2010-10-27 08:55:33 PDT
Adam Roben (:aroben)
Comment 2 2010-10-27 08:56:34 PDT
WebKit Review Bot
Comment 3 2010-10-27 08:57:55 PDT
Attachment 72040 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/NullNPPGetValuePointer.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/NullNPPGetValuePointer.cpp:28: Alphabetical sorting problem. [build/include_order] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/NullNPPGetValuePointer.cpp:54: NullNPPGetValuePointer::NPP_GetValue is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 4 2010-10-27 09:09:33 PDT
Note You need to log in before you can comment on or make changes to this bug.