WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.cpp
@@ -281,6 +281,9 @@ void NetscapePlugin::NPP_URLNotify(const char* url, NPReason reason, void* notif
 
 NPError NetscapePlugin::NPP_GetValue(NPPVariable variable, void *value)
 {
+    if (!m_pluginModule->pluginFuncs().getvalue)
+        return NPERR_GENERIC_ERROR;
+
     return m_pluginModule->pluginFuncs().getvalue(&m_npp, variable, value);
 }
 
